
Change Log Update (00.00.24)
* 2016-03-24
+ Created new text_prompt_dao to handle reading and writing prompts for all modules
+ Each module with have it's own short and simple prompt file, this is a general
  template to handle all modules

Change Log Update (00.00.23)
* 2016-03-23
+ Realigned the state code files to standard naming convention

Change Log Update (00.00.22)
* 2016-03-23
+ Renamed Broad_Caster to Session_Manager to better describe what it does.
+ Various cleanup and re-organization.
+ Also removed directory_bbs from config, the main root folder will always 
  be detected from where the executable is launched.

Change Log Update (00.00.21)
* 2016-03-23
+ Moved OBV/2 DAO's to compat sub folder to separate data access to original OBV/2 data files vs
  the current new data access objects.
+ These functions will be used later on for writing conversions.

Change Log Update (00.00.20)
* 2016-03-23
+ Created new Model sub folder to separate structures from data access objects.
+ Updated all files to the new model path
+ Added NewUserApplication stub for ModLogin 
+ Currently building out text prompt reading, Initial idea is to have single function in dao.
  Then each mod will have it's own separate file of prompts which it will pass to the dao
  to quick read module specific text prompts.

Change Log Update (00.00.19)
* 2016-03-21
+ Rename MenuManager to StateManager to reflect what it does.
+ Removed unused or old files
+ Working on Logon Module for initial login process, also testing yaml for login prompts.

Change Log Update (00.00.18)
* 2016-03-18
+ Remove Initial Stub for Language File
  Change this to Prompts_Dao, Moved to Data Folder, working on reading the OBV/2 
  Language file for prompts so I can convert this to an easier format to work
  With, later on will write an update for existing prompts.

Change Log Update (00.00.17)
* 2016-03-17
+ Added popping modules off stack when menu system is closed down!